Re-name to Forged as there is a ton of differences from the forked core. Even more to come.

--- a/Source/WorldServer/WorldServer.csproj
+++ b/Source/WorldServer/WorldServer.csproj
@@ -2,9 +2,12 @@
   <Import Project="..\..\default.props" />
   <PropertyGroup>
 	<OutputType>Exe</OutputType>
-    <ApplicationIcon>Blue.ico</ApplicationIcon>
+    <ApplicationIcon>Forged Icon.ico</ApplicationIcon>
     <StartupObject>WorldServer.Server</StartupObject>
   </PropertyGroup>
+  <ItemGroup>
+    <Content Include="Forged Icon.ico" />
+  </ItemGroup>
 
   <ItemGroup>
 	<ProjectReference Include="..\Game\Game.csproj" />
